--- a/_posts/2016-6-1-JS-notes-1.md
+++ b/_posts/2016-6-1-JS-notes-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Javascript学习笔记(一)
+title: Javascript学习笔记一
 category: Javascript
 
 ---
@@ -189,3 +189,85 @@ Map的回调函数参数依次为value、key和map本身：
 	{% endhighlight %}
 
 `javascript:`是表示在触发`<a>`默认动作时，执行一段JavaScript代码，而` javascript:; `表示什么都不执行，这样点击`<a>`时就没有任何反应。
+
+- ### 标准类型及其包装对象
+
+为了区分对象的类型，我们用`typeof`操作符获取对象的类型，它总是返回一个字符串。`number`、`string`、`boolean`、`function`和`undefined`有别于其他类型。特别注意`null`的类型是`object`，`Array`的类型也是`object`，如果我们用typeof将无法区分出`null`、`Array`和通常意义上的`object——{}`。
+
+除了这些类型外，JavaScript还提供了包装对象，就像Java中`int`和`Integer`这种暧昧关系。
+
+包装对象用`new`创建。虽然包装对象看上去和原来的值一模一样，显示出来也是一模一样，但他们的类型已经变为object了！所以，包装对象和原始值用===比较会返回false。
+
+如果我们在使用`Number`、`Boolean`和`String`时，没有写`new`会发生什么情况？此时，`Number()`、`Boolean()`和`String()`被当做普通函数，把任何类型的数据转换为`number`、`boolean`和`string`类型（注意不是其包装类型）。
+
+	{% highlight javascript %}
+	var n = Number('123'); // 123，相当于parseInt()或parseFloat()
+	typeof n; // 'number'
+
+	var b = Boolean('true'); // true
+	typeof b; // 'boolean'
+
+	var b2 = Boolean('false'); // true! 'false'字符串转换结果为true！因为它是非空字符串！
+	var b3 = Boolean(''); // false
+
+	var s = String(123.45); // '123.45'
+	typeof s; // 'string'
+	{% endhighlight %}
+
+总结一下，有这么几条规则需要遵守：
+
+- **不要使用new Number()、new Boolean()、new String()创建包装对象。**
+
+- **用parseInt()或parseFloat()来转换任意类型到number；**
+
+- **用String()来转换任意类型到string，或者直接调用某个对象的toString()方法；**
+
+- **通常不必把任意类型转换为boolean再判断，因为可以直接写if (myVar) {...}；**
+
+- **typeof操作符可以判断出number、boolean、string、function和undefined；**
+
+- **判断Array要使用Array.isArray(arr)；**
+
+- **判断null请使用myVar === null；**
+
+- **判断某个全局变量是否存在用typeof window.myVar === 'undefined'；**
+
+- **函数内部判断某个变量是否存在用typeof myVar === 'undefined'。**
+
+最后，任何对象都有`toString()`方法吗？null和undefined就没有！确实如此，这两个特殊值要除外，虽然null还伪装成了object类型。而且，number对象调用toString()报`SyntaxError`：
+
+	123.toString(); // SyntaxError
+
+遇到这种情况，要特殊处理一下：
+
+	123..toString(); // '123', 注意是两个点！
+	 (123).toString(); // '123'
+
+原因是词法分析器会把123后面的`.`当作小数点，默认后面会跟小数部分，所以后面跟着任何的方法名都会报错。
+
+- ### 为了解决块级作用域，ES6引入了新的关键字`let`，用`let`替代`var`可以申明一个块级作用域的变量。同时，ES6标准引入了新的关键字`const`来定义常量，const与let都具有块级作用域：
+
+ {% highlight javascript %}
+	'use strict';
+	function foo() {
+	    var sum = 0;
+	    for (let i=0; i<100; i++) {
+	        sum += i;
+	    }
+	    i += 1; // SyntaxError
+	}
+ {% endhighlight %}
+
+- ### H5 classList属性
+
+  - `length`属性，表示元素类名的个数，只读。
+
+  - `item()`支持一个参数，为类名的索引，返回对应的类名
+
+  - `add()`支持一个类名字符串参数。表示往类名列表中新增一个类名；如果之前类名存在，则添加忽略。
+
+  - `remove()`支持一个类名字符串参数。表示往类名列表中移除该类名。
+
+  - `toggle()`支持一个类名字符串参数。无则加勉，有则移除之意。若类名列表中有此类名，移除之，并返回false; 如果没有，则添加该类名，并返回true.
+
+  - `contains()`支持一个类名字符串参数。表示往类名列表中是否包含该类名。
