--- a/_posts/2016-6-1-JS-notes-1.md
+++ b/_posts/2016-6-1-JS-notes-1.md
@@ -12,6 +12,50 @@ category: Javascript
 
 - ### 在函数内，`var`定义的变量为函数内的局部变量，而不加`var`则变成了全局变量，可能产生命名冲突以及不必要的麻烦。
 
+而且，var变量定义的变量存在**变量提升**现象，当浏览器解析器在加载数据时，会率先读取变量声明，并使其在执行任何代码之前可用。
+
+{% highlight javascript %}
+	console.log(a);		//undefined
+	console.log(b);		//ReferenceError
+
+	var a = 2;
+	let b = 3;
+ {% endhighlight %}
+
+上面代码中，变量a用var命令声明，会发生变量提升，即脚本开始运行时，变量a已经存在了，但是没有值，所以会输出undefined。变量b用let命令声明(见下一条let)，不会发生变量提升。这表示在声明它之前，变量b是不存在的，这时如果用到它，就会抛出一个错误。
+
+但是，在定义函数时，函数声明存在提升，而函数表达式不会。
+
+{% highlight javascript %}
+	alert(sum(10,10));		//20
+	alert(sub(10,10));		//Uncaught TypeError
+	
+	function sum(num1,num2){		//函数声明
+		return num1 + num2 ;
+	}
+
+	var sub = function(sum1,sum2){		//函数表达式
+		return num1 - num2 ;
+	}
+ {% endhighlight %}
+
+但是，为了养成良好的编程习惯，还是先定义变量再使用比较好。
+
+- ### 为了解决块级作用域，ES6引入了新的关键字`let`，用`let`替代`var`可以申明一个块级作用域的变量。同时，ES6标准引入了新的关键字`const`来定义常量，const与let都具有块级作用域：
+
+ {% highlight javascript %}
+	'use strict';
+	function foo() {
+	    var sum = 0;
+	    for (let i=0; i<100; i++) {
+	        sum += i;
+	    }
+	    i += 1; // SyntaxError
+	}
+ {% endhighlight %}
+
+同时，如上一条所述，let命令定义的变量不存在变量提升现象。
+
 - ### JS浮点数计算不一定准确，需要使用`Math.floor`或其他函数进行取整。
 
 	浮点数在运算过程中会产生误差，因为计算机无法精确表示无限循环小数。要比较两个浮点数是否相等，只能计算它们之差的绝对值，看是否小于某个阈值，如下：
@@ -244,19 +288,6 @@ Map的回调函数参数依次为value、key和map本身：
 	 (123).toString(); // '123'
 
 原因是词法分析器会把123后面的`.`当作小数点，默认后面会跟小数部分，所以后面跟着任何的方法名都会报错。
-
-- ### 为了解决块级作用域，ES6引入了新的关键字`let`，用`let`替代`var`可以申明一个块级作用域的变量。同时，ES6标准引入了新的关键字`const`来定义常量，const与let都具有块级作用域：
-
- {% highlight javascript %}
-	'use strict';
-	function foo() {
-	    var sum = 0;
-	    for (let i=0; i<100; i++) {
-	        sum += i;
-	    }
-	    i += 1; // SyntaxError
-	}
- {% endhighlight %}
 
 - ### H5 classList属性
 
